[tool.poetry]
name = "space_rocks"
version = "0.0.1"
description = "A classic game developed as part of the pygame realpython course."
authors = ["Florian <f.aumeier@me.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
flake8-builtins = "^1.5.3"
flake8-variables-names = "^0.0.4"
flake8-functions-names = "^0.0.6"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
